--- a/.github/goreleaser.yml
+++ b/.github/goreleaser.yml
@@ -5,7 +5,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X main.version={{.Version}}
+      - -s -w -X main.Version={{.Version}} -X main.CommitID={{.ShortCommit}}
     goos:
       - linux
       - darwin
